--- a/frontend/src/app/dashboard/components/button/styles.module.scss
+++ b/frontend/src/app/dashboard/components/button/styles.module.scss
@@ -1,9 +1,10 @@
 .button{
+    align-self: center;
     height: 40px;
-    border-radius: 8px;
+    width: 240px;
+    border-radius: 40px;
     border: 0;
-    background-color: var(--green-900);
-    font-weight: bold;
+    background-color: var(--highlight);
     font-size: 16px;
     color: var(--white);
 }
