--- a/frontend/src/app/globals.scss
+++ b/frontend/src/app/globals.scss
@@ -8,14 +8,11 @@
 :root{
     --white: #FFF;
     --black: #000;
-
-    --dark-900: #101026;
-    --dark-700: #1d1d2e;
-    
-    --gray-100: #8a8a8a;
-    --green-900: #3ff3a3;
-    --red-900: #ff3f4b;
-
+    --gray: #8A8A8A;
+    --highlight: #9A1105;
+    --light: #FAF6ED;
+    --dark: #1A1F3F;
+    --highlight-2: #CF8E18;
 }
 
 button{
@@ -28,11 +25,12 @@ a{
 }
 
 body{
-    background: var(--dark-700);
+    background: var(--light);
 }
 
-body, input, textarea, select, button{
+body, input, textarea, select, button, textarea{
     font: 400, 1rem sans-serif;
+    font-family: "Neue Haas", sans-serif;
 }
 
 @media (max-width: 720px){
@@ -45,4 +43,25 @@ body, input, textarea, select, button{
     html{
         font-size: 93.75%
     }
+}
+
+@font-face {
+  font-family: "Chunko";
+  src: url("../assets/fonts/chunko-bold-demo.regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Neue Haas";
+  src: url("../assets/fonts/NeueHaasDisplayRoman.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "FactorA";
+  src: url("../assets/fonts/TRIALFactorA-Bold35-BF6476bc2fd89dd.otf") format("truetype");
+  font-weight: 900;
+  font-style: normal;
 }
