--- a/frontend/src/app/page.module.scss
+++ b/frontend/src/app/page.module.scss
@@ -1,13 +1,28 @@
-.containerCenter{
-  min-height: 100vh;
+.container {
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.login{
+.containerCenter {
+  display: flex;
+  width: 444px;
+  height: 500px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 13px;
+  border-radius: 19px;
+  border: 2px solid #000;
+  background: linear-gradient(180deg, rgba(250, 246, 237, 0.20) 30.7%, rgba(207, 142, 24, 0.20) 86.33%), #FFF;
+  box-shadow: 3px 4px 0 0 #000;
+}
+
+.login {
   margin-top: 24px;
+  padding: 0 90px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,12 +30,12 @@
   gap: 16px;
   width: 600px;
 
-  h1{
-    color: var(--white);
+  h1 {
+    color: var(--dark);
   }
 
-  form{
-    color: var(--white);
+  form {
+    color: var(--dark);
     padding-bottom: 16px;
     font-size: 18px;
     display: flex;
@@ -29,12 +44,12 @@
     gap: 16px;
   }
 
-  form button{
+  form button {
     height: 40px;
     font-size: 16px;
-    background-color: var(--red-900);
+    background-color: var(--highlight);
     border: 0;
-    border-radius: 8px;
+    border-radius: 70px;
     color: var(--white);
     display: flex;
     align-items: center;
@@ -42,33 +57,35 @@
     transition: all 0.5s;
   }
 
-  form button:hover{
+  form button:hover {
     transform: scale(1.05);
   }
 
 }
 
-.input{
+.input {
   height: 40px;
-  border: 1px solid var(--gray-100);
+  border: 1px solid #A5A5A5;
   padding: 0 16px;
-  border-radius: 8px;
-  background-color: var(--dark-900);
-  color: var(--white);
+  border-radius: 14px;
+  background-color: var(--white);
+  color: var(--dark);
   font-size: 16px;
+  box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.25);
 }
 
-.input::placeholder{
-  color: rgba(255, 255, 255, 0.700);
+.input::placeholder {
+  color: var(--dark);
 }
 
-.text{
-  color: var(--white);
+.text {
+  color: var(--dark);
   text-decoration: none;
+  font-family: "Neue Haas", sans-serif;
 }
 
-@media (max-width: 620px){
-  .login{
+@media (max-width: 620px) {
+  .login {
     width: 90%;
   }
 }
