--- a/frontend/src/app/dashboard/components/orders/styles.module.scss
+++ b/frontend/src/app/dashboard/components/orders/styles.module.scss
@@ -38,7 +38,7 @@
     border: 0;
     font-size: 18px;
     border-radius: 8px;
-    color: var(--white);
+    color: var(--dark);
     transition: all 0.5s;
 
     &:hover{
