--- a/frontend/src/app/dashboard/components/header/styles.module.scss
+++ b/frontend/src/app/dashboard/components/header/styles.module.scss
@@ -7,7 +7,6 @@
         height: 5rem;
         margin: 0 auto;
         padding: 0 16px;
-
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -17,7 +16,6 @@
         display: flex;
         align-items: center;
         gap: 14px;
-
 
     a{
         color: var(--dark);
@@ -37,6 +35,7 @@
 
         &:hover{
             transform: scale(1.2);
+            color: #9A1105;
         }
     }
   }
