:lipstick: Atualizando ingrediente

--- a/frontend/src/app/dashboard/product/components/form/styles.module.scss
+++ b/frontend/src/app/dashboard/product/components/form/styles.module.scss
@@ -32,7 +32,8 @@
         min-height: 120px;
         resize: none;
         padding: 8px;
-        color: var(--white);
+        background-color: var(--white);
+        color: black;
     }
 }
 
