--- a/frontend/src/app/dashboard/ingredient/components/form/styles.module.scss
+++ b/frontend/src/app/dashboard/ingredient/components/form/styles.module.scss
@@ -20,10 +20,10 @@
         width: 100%;
         height: 40px;
         border-radius: 8px;
-        background-color: var(--dark-900);
+        background-color: var(--dark);
         color: var(--white);
         padding:  0 8px;
-        border: 1px solid var(--gray-100);
+        border: 1px solid var(--gray);
     }
 
     textarea{
@@ -39,7 +39,7 @@
     width: 100%;
     height: 280px;
     position: relative;
-    background-color: var(--dark-900);
+    background-color: var(--white);
     border-radius: 8px;
     display: flex;
     align-items: center;
@@ -47,7 +47,7 @@
     cursor: pointer;
     flex-direction: column;
     margin-bottom: 16px;
-    border: 1px solid var(--gray-100);
+    border: 1px solid var(--gray);
 
     input{
         display: none;
@@ -75,9 +75,9 @@
 .input{
     border: 0;
     height: 40px;
-    background-color: var(--dark-900);
-    border: 1px solid var(--gray-100);
+    background-color: var(--white);
+    border: 1px solid var(--gray);
     border-radius: 8px;
     padding: 0 8px;
-    color: var(--white);
+    color: var(--dark);
 }
