--- a/frontend/src/app/dashboard/product/components/form/styles.module.scss
+++ b/frontend/src/app/dashboard/product/components/form/styles.module.scss
@@ -32,7 +32,7 @@
         min-height: 120px;
         resize: none;
         padding: 8px;
-        color: var(--white);
+        color: var(--dark);
     }
 }
 
@@ -103,7 +103,7 @@
         color: var(--dark);
     }
 
-    button {
+    button {    
         background-color: var(--highlight);
         color: var(--white);
         border: 1px solid var(--gray);
