--- a/frontend/src/app/dashboard/components/modal/styles.module.scss
+++ b/frontend/src/app/dashboard/components/modal/styles.module.scss
@@ -69,3 +69,25 @@
 .total{
     margin: 8px 0 16px 0;
 }
+
+.buttonItemConclude {
+    background-color: var(--highlight-2); // Cor de destaque para indicar ação
+    color: var(--dark);
+    padding: 4px 8px;
+    border-radius: 4px;
+    border: 1px solid var(--highlight-2);
+    cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.2s;
+
+    &:hover {
+        background-color: var(--highlight);
+        color: var(--white);
+    }
+}
+
+.buttonOrder:disabled {
+    background-color: var(--gray);
+    cursor: not-allowed;
+    opacity: 0.7;
+}
