--- a/frontend/src/app/page.module.scss
+++ b/frontend/src/app/page.module.scss
@@ -20,6 +20,19 @@
   box-shadow: 3px 4px 0 0 #000;
 }
 
+.containerCenterSignUp {
+display: flex;
+  width: 444px;
+  height: 560px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 19px;
+  border: 2px solid #000;
+  background: linear-gradient(180deg, rgba(250, 246, 237, 0.20) 30.7%, rgba(207, 142, 24, 0.20) 86.33%), #FFF;
+  box-shadow: 3px 4px 0 0 #000;
+}
+
 .login {
   margin-top: 24px;
   padding: 0 90px;
@@ -63,6 +76,49 @@
 
 }
 
+.signUp {
+padding: 0 90px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+  width: 600px;
+
+  h1 {
+    color: var(--dark);
+  }
+
+  form {
+    color: var(--dark);
+    padding-bottom: 16px;
+    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    gap: 16px;
+  }
+
+  form button {
+    height: 40px;
+    font-size: 16px;
+    background-color: var(--highlight);
+    border: 0;
+    border-radius: 70px;
+    color: var(--white);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s;
+  }
+
+  form button:hover {
+    transform: scale(1.05);
+  }
+
+}
+
+
 .input {
   height: 40px;
   border: 1px solid #A5A5A5;
@@ -88,4 +144,9 @@
   .login {
     width: 90%;
   }
+}
+
+.containerCenterSignUp img {
+  width: 250px;
+  height: 100px;
 }
